Update talalapps.json with new entries

--- a/myset/talalapps.json
+++ b/myset/talalapps.json
@@ -1,5 +1,11 @@
 [{
 
+        "title": "حاسبة الاهلاك",
+        "desc": "أداة لحساب الاهلاك ومخصص  الاهلاك للأصول الثابتة بناءً على اختيارات المدد.",
+        "icon": "🧮",
+        "url": "https://talalcer.github.io/dep.html"
+    },{
+
         "title": "دورة منظمة الانتوساي",
         "desc": "مجموعة من الملفات التعليمية حول منظمة الانتوساي ودورها في الحوكمة الدولية",
         "icon": "🌐",
@@ -74,4 +80,5 @@
         "icon": "🚀",
         "url": "#"
     }
+
 ]
